--- a/main.html
+++ b/main.html
@@ -8,6 +8,26 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>Bali</h1>
+	<hr>
+	<p>
+		Bali (/ˈbɑːli/; Balinese: ᬩᬮᬶ) is a province of Indonesia and the westernmost of the Lesser Sunda Islands. East of Java and west of Lombok, the province includes the island of Bali and a few smaller offshore islands, notably Nusa Penida, Nusa Lembongan, and Nusa Ceningan to the southeast. The provincial capital, Denpasar,[7] is the most populous city in the Lesser Sunda Islands and the second-largest, after Makassar, in Eastern Indonesia. The upland town of Ubud in Greater Denpasar is considered Bali's cultural centre. The province is Indonesia's main tourist destination, with a significant rise in tourism since the 1980s.[8] Tourism-related business makes up 80% of its economy.
+	</p>
+	<ol type ="1">
+		<li><b>uluwatu</b></li>
+		<li><b>ubud</b></li>
+		<li><b>sanur</b></li>
+		<li><b>batuan</b></li>
+		<li><b>kuta</b></li>
+	</ol>
+	<ul>
+		<li><strong>Ayam Betutu</strong></li>
+		<li><strong>Nasi Ayam</strong></li>
+		<li><strong>Babi Guling</strong></li>
+		<li><strong>lawar</strong></li>
+		<li><strong>klepon</strong></li>
+	</ul>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
