--- a/main.html
+++ b/main.html
@@ -15,17 +15,17 @@
 	</p>
 	<ol type ="1">
 		<li><b>uluwatu</b></li>
-		<li><b>ubud</b></li>
-		<li><b>sanur</b></li>
-		<li><b>batuan</b></li>
-		<li><b>kuta</b></li>
+		<li>ubud</li>
+		<li>sanurb</li>
+		<li>batuanb</li>
+		<li>kuta</li>
 	</ol>
 	<ul>
 		<li><strong>Ayam Betutu</strong></li>
-		<li><strong>Nasi Ayam</strong></li>
-		<li><strong>Babi Guling</strong></li>
-		<li><strong>lawar</strong></li>
-		<li><strong>klepon</strong></li>
+		<li>Nasi Ayam</li>
+		<li>Babi Gulingg</li>
+		<li>lawar</li>
+		<li>klepon</li>
 	</ul>
 	
     <script type="text/javascript" src="./script.js">
