--- a/main.html
+++ b/main.html
@@ -20,7 +20,7 @@
 		<li>batuanb</li>
 		<li>kuta</li>
 	</ol>
-	<ul>
+	<ul type = "circle">
 		<li><strong>Ayam Betutu</strong></li>
 		<li>Nasi Ayam</li>
 		<li>Babi Gulingg</li>
