--- a/main.html
+++ b/main.html
@@ -14,8 +14,8 @@
 		Bali (/ˈbɑːli/; Balinese: ᬩᬮᬶ) is a province of Indonesia and the westernmost of the Lesser Sunda Islands. East of Java and west of Lombok, the province includes the island of Bali and a few smaller offshore islands, notably Nusa Penida, Nusa Lembongan, and Nusa Ceningan to the southeast. The provincial capital, Denpasar,[7] is the most populous city in the Lesser Sunda Islands and the second-largest, after Makassar, in Eastern Indonesia. The upland town of Ubud in Greater Denpasar is considered Bali's cultural centre. The province is Indonesia's main tourist destination, with a significant rise in tourism since the 1980s.[8] Tourism-related business makes up 80% of its economy.
 	</p>
 	<ol type ="1">
-		<li><b>uluwatu</b></li>
-		<li>ubud</li>
+		<li><b><italicized>uluwatu</italicized></b></li>
+		<li><italicized>ubud</italicized></li>
 		<li>sanurb</li>
 		<li>batuanb</li>
 		<li>kuta</li>
@@ -24,7 +24,7 @@
 		<li><strong>Ayam Betutu</strong></li>
 		<li>Nasi Ayam</li>
 		<li>Babi Gulingg</li>
-		<li>lawar</li>
+		<li><italicized>luwar</italicized></li>
 		<li>klepon</li>
 	</ul>
 	
